--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 x-airflow-common: &airflow-common
     image: apache/airflow:2.8.1-python3.10
     environment: &airflow-common-env
@@ -11,13 +9,16 @@ x-airflow-common: &airflow-common
         AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
         AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
         _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+        GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/gcp-credentials.json
     volumes:
-        - ${AIRFLOW_PROJ_DIR:-.}/airflow/dags:/opt/airflow/dags
-        - ${AIRFLOW_PROJ_DIR:-.}/airflow/logs:/opt/airflow/logs
-        - ${AIRFLOW_PROJ_DIR:-.}/airflow/config:/opt/airflow/config
-        - ${AIRFLOW_PROJ_DIR:-.}/airflow/plugins:/opt/airflow/plugins
-        - ${AIRFLOW_PROJ_DIR:-.}/src:/opt/airflow/src
-        - ${AIRFLOW_PROJ_DIR:-.}/ml:/opt/airflow/ml
+        - ./airflow/dags:/opt/airflow/dags
+        - ./airflow/logs:/opt/airflow/logs
+        - ./airflow/config:/opt/airflow/config
+        - ./airflow/plugins:/opt/airflow/plugins
+        - ./src:/opt/airflow/src
+        - ./ml:/opt/airflow/ml
+        - ./data:/opt/airflow/data
+        - ./gcp-credentials.json:/opt/airflow/gcp-credentials.json:ro
     user: "${AIRFLOW_UID:-50000}:0"
     depends_on: &airflow-common-depends-on
         postgres:
@@ -90,7 +91,7 @@ services:
             _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-admin}
         user: "0:0"
         volumes:
-            - ${AIRFLOW_PROJ_DIR:-.}/airflow:/sources
+            - ./airflow:/sources
 
 volumes:
     postgres-db-volume:
