--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ apache-airflow-providers-google==10.14.0
 pandas==2.1.4
 numpy==1.26.3
 pyarrow==14.0.2
+streamlit==1.31.0
 
 # ============================================
 # API CLIENTS
@@ -57,6 +58,7 @@ google-auth>=2.23.3  # CORRIGIDO: >=2.23.3 (exigido por google-cloud-storage)
 python-dotenv==1.0.0
 pyyaml==6.0.1
 python-telegram-bot==20.7
+pytz==2023.3
 
 # ============================================
 # DEVELOPMENT
